--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,10 +4,21 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-        {
-            "type": "apache.camel",
-            "request": "attach",
-            "name": "Attach Camel Debugger"
+    {
+        "type": "coreclr",
+        "request": "launch",
+        "name": "C# Launch (Attach)",
+        "justMyCode": true,
+        "corelrun": "pwd",
+        "args": ["-a", "1", "2", "3"],
+        "cwd": "${workspaceFolder}",
+        "program": "${workspaceFolder}/bin/Debug/Program.exe",
+        "env": {
+            "ASPNETCORE_ENVIRONMENT": "Development"
+        },
+        "console": "internalConsole",
+  
+
         }
     ]
 }
